kubernetes/apps/dispatcharr/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: dispatcharr
    app.kubernetes.io/name: dispatcharr
  name: dispatcharr
  namespace: media
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: dispatcharr
      app.kubernetes.io/name: dispatcharr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: dispatcharr
        app.kubernetes.io/name: dispatcharr
    spec:
      containers:
        - name: dispatcharr
          image: ghcr.io/dispatcharr/dispatcharr:0.31.0@sha256:f81924fa3dbfeb463b3908be7e086bf58aacbd2ba56062bfb555ee3a471acf8f
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 500m
              nvidia.com/gpu: "1"
            limits:
              memory: 2Gi
              nvidia.com/gpu: "1"
          ports:
            - containerPort: 9191
              name: main
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: data
          readinessProbe:
            httpGet:
              path: /api/core/version/
              port: main
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/core/version/
              port: main
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 3
        - name: celery
          image: ghcr.io/dispatcharr/dispatcharr:0.31.0@sha256:f81924fa3dbfeb463b3908be7e086bf58aacbd2ba56062bfb555ee3a471acf8f
          command: ["/app/docker/entrypoint.celery.sh"]
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            requests:
              cpu: 250m
            limits:
              memory: 2Gi
          livenessProbe:
            exec:
              command: ["celery", "-A", "dispatcharr", "inspect", "ping"]
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 5
            failureThreshold: 4
      tolerations:
        - effect: NoSchedule
          key: nvidia.com/gpu
          operator: Equal
          value: present
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        supplementalGroups:
          - 105 # Add render group.
          - 44
          - 107
          - 568
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: dispatcharr-data
