kubernetes/apps/dispatcharr/overlays/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dispatcharr
  namespace: media
spec:
  selector:
    app.kubernetes.io/instance: dispatcharr
    app.kubernetes.io/name: dispatcharr
  ports:
    - name: main
      port: 9191
      protocol: TCP
      targetPort: main
