kubernetes/apps/dispatcharr/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: dispatcharr-ingress
  namespace: media
  annotations:
    external-dns.kubernetes.io/target: infra-int
spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`dispatcharr.sobrinho.pt`)
      kind: Rule
      services:
        - name: dispatcharr
          port: main
  tls:
    secretName: dispatcharr-cert
